<resources>
    <string name="app_name">California Prototype</string>
    <string name="currently_on_screen_string">You are currently on the screen: </string>
    <string name="aws_access_id">123456789</string>
    <string name="aws_client_secret">987654321</string>
    <string name="map_content_description">This is a map. If location permissions have been granted, it will default to your location. If location permissions have not been granted, it will default to Los Angeles, CA</string>
    <string name="gps_must_be_enabled">GPS must be enabled before this operation can run</string>
    <string name="loading_last_known_loc">Location is disabled, loading your last known location</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="youremail_email_com">youremail@email.com</string>
    <string name="pw_stars">********</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="continue_button">Continue</string>
    <string name="forgot_my_password">Forgot My Password</string>
    <string name="login_with_my_phone_number">Login With My Phone Number</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="invalid_email_address">Invalid email address. Example: Mark@email.com</string>
    <string name="password_error_help">Your password must be at least 6 characters long and contain at least one number and letter</string>
    <string name="edit_number">Edit Number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="we_sent_a_6_digit_code_to_your_number">We sent a 6-digit code to your number</string>
    <string name="verify">Verify</string>
    <string name="haven_t_received_your_verification_code">Haven\'t received your verification code?</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="invalid_verification_code">Invalid verification code. Please check your text message and enter the information again</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="invalid_phone_number">You have entered an invalid phone number. Please enter a 10 digit phone number, IE (213) 555 - 5555</string>
    <string name="continue_without_an_account">Continue without an account</string>
    <string name="login_with_email">Login with Email</string>
    <string name="no_search_results">There were no search results from your query</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="error_could_not_find">We couldn\'t find this location. Modify your search and try again.</string>
    <string name="error_message">Error Message</string>
    <string name="access_location_perm_title">Access Location</string>
    <string name="access_location_perm_message">This permission is used to access your current location when the app opens. It does not track when the app is closed and will only run when on the map page.</string>
    <string name="current_state_emergency">EMERGENCY: </string>
    <string name="fake_address_hint">123 Fake St, Irvine, CA 92618</string>
    <string name="add_location">Add Location</string>
    <string name="cancel">Cancel</string>
    <string name="autocomplete_hint">92618</string>
    <string name="no_location_selected_error_message">You must select a location first</string>
    <string name="backup_selected_loc_text">Selected Location</string>
    <string name="generic_error_text">An error has occurred, please try again</string>
    <string name="location_successfully_added">Location Successfully Added</string>
    <string name="add_person_button_explanation_1">If you want to add a contact to the location, just click on the \'Add a person\' button below</string>
    <string name="or">Or</string>
    <string name="your_friend_s_name">Your Friend\'s Name</string>
    <string name="sample_number">(123) 456 - 7890</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_from_phone_contacts">Add from phone contacts</string>
    <string name="contact_error_text">Contact cannot be used, missing phone number or name</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="add_location_fragment_name">Add a Location</string>
    <string name="map_fragment_name">Disaster Planning</string>
    <string name="permission_requests_fragment">Permissions Request</string>
    <string name="your_profile_fragment">Your Profile</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="debug_popup_skipping">CURRENTLY NOT LINKED TO BACK-END, SKIPPING</string>
    <string name="register_for_one">Register for one</string>
    <string name="login_to_one">Login to it</string>
    <string name="register_for_account">Register For Account</string>
    <string name="api_response_incorrect_credentials">Login failed</string>
    <string name="username_pw_incorrect">Username or password incorrect. Please check your input and try again</string>
    <string name="enter_a_valid_phone_number">Please enter a valid phone number</string>
    <string name="phone_number_didnt_save">An error has occurred, please enter your phone number again</string>
    <string name="account_null_error">There was an error retrieving your account. Please log in again</string>
    <string name="no_account_register_text">We don\'t have a record of an account with that information, would you like to register for a new account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_record_found">No Record Found</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="your_name">Your Name</string>
    <string name="allow_sms_notifications">Allow sms notifications</string>
    <string name="allow_email_notifications">Allow email notifications</string>
    <string name="must_keep_phone_or_email">You must have either an email or phone to be able to login</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
    <string name="change_your_email">Change Your Email</string>
    <string name="enter_new_email">enter your new email address below</string>
    <string name="change_phone_number">Change your phone number</string>
    <string name="enter_new_phone_number">Enter a new 10 digit phone number</string>
    <string name="sample_phone_number">(000) 000 - 0000</string>
    <string name="change_your_name">Change your name</string>
    <string name="enter_new_name">Enter the name you would like below</string>
    <string name="first_name">First Name</string>
    <string name="enter_valid_email">Please enter a valid email address</string>
    <string name="forgot_pw_instructions">Please enter a valid email in the email box and then click forgot password to have it reset</string>
    <string name="forgot_pw_instructions2">An email has been sent to the one you entered with instructions on resetting your credentials</string>
    <string name="record_already_exists">Records already exist</string>
    <string name="remove_location">Remove Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="tbd_later">To be implemented in a future release</string>
    <string name="location_name">Location Name</string>
    <string name="email_notifications_enabled">Email notifications enabled</string>
    <string name="sms_notifications_enabled">SMS notifications enabled</string>
    <string name="radius_of_alert_in_miles">Radius of Alert (In Miles)</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="no_loc_to_edit">No location to edit</string>
    <string name="fill_out_all_fields">Please fill out or edit required fields</string>
    <string name="change_location">Change Location</string>
    <string name="update_location_error">An error occurred while tyring to update your location. Please check the data and try again.</string>
    <string name="location_successfully_updated">Your location has been successfully updated</string>
    <string name="no_name">No name</string>
    <string name="unknown">Unknown</string>
    <string name="back_popup">Press back once more to exit</string>
    <string name="location_successfully_deleted">Your location has been successfully deleted</string>
</resources>
